--- a/index.html
+++ b/index.html
@@ -4184,7 +4184,7 @@
                                                     <div class="row">
                                                         <div class="col-md-6 mb-4">
 
-                                                            <select class="select">
+                                                            <select class="form-control">
                                                                 <option value="1">Select Trip </option>
                                                                 <option value="2">Denali and
                                                                     Alaska Courses</option>
